# MobileNet_SSD_ARMv7

./: CMakeLists.txt
model/fine_tuned_model/: model.ckpt.index  pipeline.config  ssd_mobilenet_v2_coco_2018_03_29.pbtxt
src/: main.cpp
